--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ google-site-verification.txt
 # Ignore personal notes and docs 
 analise_gpt.docx
 download_api_visit_site.txt
+fetchDailyData.js
+teste_formulario.py
