i18n: fix Read/Ler artigo button

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ analise_gpt.docx
 download_api_visit_site.txt
 fetchDailyData.js
 teste_formulario.py
+Tutorial Curadoria diária de notícias (Emalytics).txt
